# intella-hiring-challenges

./: README.md  docker-compose.yaml
ai-engineering/: README.md
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: main.py
backend/src/routes/: health.py
frontend/: README.md
